# jsk_model_tools

./: .travis.yml  LICENSE  README.md  stack.xml
collada_tools/: CMakeLists.txt  README  catkin.cmake  collada_parser.fuerte.patch  gazebo_electric_collada.patch  gazebo_fuerte_collada.patch  mainpage.dox  manifest.xml  package.xml  package.xml.deprecated
collada_tools/scripts/: add_gazebo_tags.sh  add_gazebo_tags_to_collada.sh  add_gazebo_tags_to_urdf.sh  fix_collada_version.sh  parse_gazebo_properties.sh  pub_joint_traj_action.sh  pub_joint_trajectory_action.py  static_joint_state_publisher.py
collada_tools/src/: collada_gazebo_gen.cpp  collada_to_graphviz.cpp  collada_to_urdf.cpp
eus_assimp/: .gitignore  CHANGELOG.rst  CMakeLists.convexdecompm.txt  CMakeLists.txt  catkin.cmake  manifest.xml  package.xml
eus_assimp/euslisp/: eus-assimp.l
eus_assimp/src/: eus_assimp.cpp
euscollada/: .gitignore  CHANGELOG.rst  CMakeLists.txt  catkin.cmake  conf.py  index.rst  manifest.xml  nao.sh  nao.yaml  package.xml  pr2-mimic.sh  pr2-mimic.yaml  pr2.sh  pr2.yaml  pr2_custom_limb.yaml  rosdep.yaml
euscollada/scripts/: add_eef_to_urdf.py  add_sensor_to_collada.py  add_sensor_to_urdf.py  parseColladaBase.py  remove_sensor_from_urdf.py  replace_library_nodes.py  urdf_patch.py
euscollada/src/: collada2eus.cpp  collada2eus_dev.cpp  collada2eus_urdfmodel.cpp  euscollada-robot.l  euscollada-robot_urdfmodel.l  xml.l
euscollada/test/: collada2eus_test.py  euscollada-model-conversion-test.l  euscollada-pr2-test.l  euscollada-test.launch  samplerobot1.yaml  samplerobot2.yaml  test-mimic.l  test-mimic.test  test-sample-robot.l  test-sample-robot.test
euscollada/test/robots/: test-linear-1.urdf  test-linear-mimic-1.urdf  test-linear-mimic-2.urdf  test-revolute-1.urdf  test-revolute-2.urdf  test-revolute-2.yaml  test-revolute-mimic-1.urdf  test-revolute-mimic-2.urdf  test-revolute-mimic-2.yaml  test-revolute-mimic-3.urdf  test-revolute-mimic-4.urdf  test-revolute-mimic-5.urdf
eusurdf/: .gitignore  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  manifest.xml  package.xml
eusurdf/cmake/: eusurdf.cmake
eusurdf/euslisp/: conversion-utils.l  convert-eus-to-urdf.l  eus2urdf.l  eusmodel_to_urdf.l  eusscene_to_world.l  eusscene_to_xacro.l  eusurdf.l  generate-model-from-voxel.l  read-stl.l  urdf2eus.l
eusurdf/models/: manifest.xml
eusurdf/models/3t-600-clean-locker/: model.config  model.scene  model.urdf
eusurdf/models/akiba-desk/: model.config  model.scene  model.urdf
eusurdf/models/akiba-door/: model.config  model.scene  model.urdf
eusurdf/models/akiba-door-window/: model.config  model.scene  model.urdf
eusurdf/models/akiba-room-door/: model.config  model.scene  model.urdf
eusurdf/models/akiba-tv-desk/: model.config  model.scene  model.urdf
eusurdf/models/arrow/: model.config  model.scene  model.urdf
eusurdf/models/arrow-1000/: model.config  model.scene  model.urdf
eusurdf/models/askul-1200-desk/: model.config  model.scene  model.urdf
eusurdf/models/askul-1200x700-desk/: model.config  model.scene  model.urdf
eusurdf/models/askul-1400-desk/: model.config  model.scene  model.urdf
eusurdf/models/askul-1600-desk/: model.config  model.scene  model.urdf
eusurdf/models/askul-2700-desk/: model.config  model.scene  model.urdf
eusurdf/models/askul-corner-desk/: model.config  model.scene  model.urdf
eusurdf/models/askul-gdh-cupboard/: model.config  model.scene  model.urdf
eusurdf/models/askul-ntr-cupboard/: model.config  model.scene  model.urdf
eusurdf/models/asplund-cabinet-4dan/: model.config  model.scene  model.urdf
eusurdf/models/asplund-cabinet-4danbase/: model.config  model.scene  model.urdf
eusurdf/models/audio_shelf/: model.config  model.scene  model.urdf
eusurdf/models/azuma-broom/: model.config  model.scene  model.urdf
eusurdf/models/azuma-short-broom/: model.config  model.scene  model.urdf
eusurdf/models/ball/: model.config  model.scene  model.urdf
eusurdf/models/bamboo-broom/: model.config  model.scene  model.urdf
eusurdf/models/bariera-1200-corner/: model.config  model.scene  model.urdf
eusurdf/models/bariera-1200-middle/: model.config  model.scene  model.urdf
eusurdf/models/bariera-1200-middle2/: model.config  model.scene  model.urdf
eusurdf/models/bariera-1200-middle3/: model.config  model.scene  model.urdf
eusurdf/models/bariera-1200-right/: model.config  model.scene  model.urdf
eusurdf/models/bariera-1400-middle/: model.config  model.scene  model.urdf
eusurdf/models/bariera-900-left/: model.config  model.scene  model.urdf
eusurdf/models/bariera-900-middle/: model.config  model.scene  model.urdf
eusurdf/models/bears-panel/: model.config  model.scene  model.urdf
eusurdf/models/bidirectional-arrow/: model.config  model.scene  model.urdf
eusurdf/models/blue-clear-cup/: model.config  model.scene  model.urdf
eusurdf/models/book/: model.config  model.scene  model.urdf
eusurdf/models/broom/: model.config  model.scene  model.urdf
eusurdf/models/brown-board/: model.config  model.scene  model.urdf
eusurdf/models/cardboard-box/: model.config  model.scene  model.urdf
eusurdf/models/casio-330-analog-clock/: model.config  model.scene  model.urdf
eusurdf/models/chair/: model.config  model.urdf  (+1 more)
eusurdf/scripts/: add_eef_to_urdf.py  add_sensor_to_urdf.py  convert-all-eusmodel.py  convert-all-eusscene.py  convert-scene-to-urdf.py  eus2urdf_for_gazebo.py  make_fixed_model.py  make_static_model.py  urdf_to_srdl.py  urdf_to_xacro.py
eusurdf/test/: convert-eus-to-urdf-test.l
eusurdf/worlds/: .gitignore
eusurdfwrl/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
eusurdfwrl/cmake/: eusurdfwrl.cmake
eusurdfwrl/scripts/: convertworld.py  filter.mlx
urdf_mesh_converter/: CMakeLists.txt  README.md  package.xml  requirements.in
urdf_mesh_converter/samples/: .gitignore  base_link.3dxml  camera_link.3dxml  pitch_link.3dxml  pitch_yaw_2axis_camera_module.urdf
urdf_mesh_converter/scripts/: convert_urdf_mesh.py
urdf_mesh_converter/tests/: test_urdf_mesh_converter.py  test_urdf_mesh_converter.test
(+1498 files in other folders)
