<package>
  <name>euscollada</name>
  <version>0.1.0</version>
  <description>euscollada</description>

  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/euscollada</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>collada_urdf</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>assimp</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>collada_urdf</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>assimp</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <!-- <test_depend>collada_urdf</test_depend> -->
  <!-- <test_depend>euslisp</test_depend> -->
  <!-- <test_depend>roseus</test_depend> -->
  <!-- <test_depend>jsk_tools</test_depend> -->

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
