<package format="3">
  <name>euscollada</name>
  <version>0.4.5</version>
  <description>euscollada</description>

  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/euscollada</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>assimp_devel</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>collada-dom</build_depend>
  <build_depend>collada_parser</build_depend>
  <build_depend>liburdfdom-dev</build_depend> <!-- for indigo -->
  <build_depend>libqhull</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>rosboost_cfg</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>collada_urdf</build_depend>
  <build_depend>rostest</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>assimp_devel</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>liburdfdom-dev</exec_depend> <!-- for indigo -->
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>collada-dom</exec_depend>
  <exec_depend>collada_parser</exec_depend>
  <exec_depend>libqhull</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>collada_urdf</exec_depend>
  <exec_depend>rostest</exec_depend>

  <test_depend>roseus</test_depend>
  <test_depend>openhrp3</test_depend>
  <test_depend>pr2_description</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
