<?xml version="1.0"?>
<package>
  <name>eusurdf</name>
  <version>0.1.12</version>
  <description>
   <p>Metapackage that contains model_tools package for jsk-ros-pkg</p>
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="youhei@jsk.imi.i.u-tokyo.ac.jp">Youhei Kakiuchi</author>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/eusurdf</url>
  <url type="repository">https://github.com/jsk-ros-pkg/eusurdf</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/eusurdf/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
