<package>
  <name>eusurdf</name>
  <version>0.2.1</version>
  <description>urdf models converted from euslisp</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="youhei@jsk.imi.i.u-tokyo.ac.jp">Youhei Kakiuchi</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/eusurdf</url>
  <url type="repository">https://github.com/jsk-ros-pkg/eusurdf</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/eusurdf/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>euslisp</build_depend>
  <build_depend>collada_urdf_jsk_patch</build_depend>
  <build_depend>rosbash</build_depend>

  <run_depend>roseus</run_depend>
  <run_depend>collada_urdf_jsk_patch</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <!-- if same models are defined on textured_models, gazebo loads textured at first -->
    <gazebo_ros gazebo_model_path="${prefix}/textured_models" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
