<?xml version="1.0"?>
<package format="2">
  <name>eusurdfwrl</name>
  <version>0.0.0</version>
  <description>wrl models converted from eusurdf</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eusurdf</build_depend>
  <build_depend>meshlab</build_depend>

</package>
